[gd_scene load_steps=6 format=3 uid="uid://mje0fgmhvo4q"]

[ext_resource type="Script" path="res://Main/Scripts/Overlays/OverlayTypes/BlackFade.gd" id="1_1yemv"]

[sub_resource type="Animation" id="Animation_jdfi1"]
resource_name = "FadeIn"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pkabw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3lfn1"]
resource_name = "FadeOut"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(4.2, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b406i"]
_data = {
"FadeIn": SubResource("Animation_jdfi1"),
"FadeOut": SubResource("Animation_3lfn1"),
"RESET": SubResource("Animation_pkabw")
}

[node name="BlackFade" type="Node2D"]
script = ExtResource("1_1yemv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b406i")
}

[connection signal="resized" from="ColorRect" to="." method="_on_resized"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_anim_finished"]
